@@ -3,10 +3,10 @@ package com.alihs.files;
 import lombok.Data;
 import lombok.ToString;
 
+
 import java.io.*;
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
 
@@ -16,7 +16,7 @@ import java.util.UUID;
 @ToString
 
 public class FilePathDataImplements implements IFileLogData {
-    //Variables - Değişkenler
+    //Variables
 
     private String id;
     private String filePathName;
@@ -28,31 +28,18 @@ public class FilePathDataImplements implements IFileLogData {
     public FilePathDataImplements() {
         this.id = UUID.randomUUID().toString();
         this.systemCreatedDate = new Date(System.currentTimeMillis());
-        this.filePathName = "\\car.txt";
-        this.fileDirectoryName = FilePathUrl.MY_CAR_FILE_PATH_URL;
-        this.url = fileDirectoryName.concat(filePathName);
-        this.file = new File(url);
-        //İlgili dosya yoksa yeni bir tane oluştur. Varsa mevcut dosyayı kullan.
-        try {
-            if (file.exists()){
-                System.out.println(url+" dosyası mevcut, yeni dosya oluşturulmadı.");
-            }else{
-                file.createNewFile();
-                System.out.println("Dosya oluşturuldu.");
-            }
-        }catch (Exception e){
-            e.printStackTrace();
-        }
+        this.fileDirectoryName = FilePathUrl.MY_FILES_PATH;
+
     }
 
     @Override
     public String logLocalDateTime() {
 
-        Locale locale = new Locale("tr","TR");
+        Locale locale = Locale.of("tr","TR");
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss", locale); //pattern: zzzz => time zone.
         Date date = new Date();
-        String changeDate = sdf.format(date);
-        return changeDate;
+
+        return sdf.format(date);
     }
 
     @Override
@@ -61,41 +48,62 @@ public class FilePathDataImplements implements IFileLogData {
     }
 
     @Override
-    public String logFileCreator(String fileName) {
-        return "";
-    }
+    public void logFileCreator(String fileName) {
+        this.filePathName = "\\"+fileName+".txt";
+        this.url = fileDirectoryName.concat(filePathName);
+        this.file = new File(url);
+        try {
 
-    @Override
-    public List<String> logFileList() {
-        return List.of();
-    }
+            if (file.exists()){
+                System.out.println(fileName+" file already exists!");
+            }
 
-    @Override
-    public void logFileWriter(String username, String password) {
-        try(BufferedWriter bw = new BufferedWriter(new FileWriter(file,true))){
-            String nowDate = logLocalDateTime();
-            String value = "["+nowDate+"]"+ username+" "+password;
-            bw.write(value+"\n");
-            System.out.println("Eklendi");
-            bw.flush();
+            else if(file.createNewFile()){
+                System.out.println("The file has been created!");
+            }
+
+            else{
+                System.out.println("The file has not been created!");
+            }
+
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
     @Override
-    public void logFileReader() {
-        String rows; //okunan satır
+    public File[] logFileList() {
+        File[] fileList = new File(this.fileDirectoryName).listFiles();
+
+        assert fileList != null;
+        return fileList;
+    }
+
+    @Override
+    public void logFileWriter(File file, String text) {
+        try(BufferedWriter bw = new BufferedWriter(new FileWriter(file,true))){
+            String nowDate = logLocalDateTime();
+            String value = "["+nowDate+"] "+text;
+            bw.write(value+"\n");
+            System.out.println("Text has been added!");
+            bw.flush();
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public String logFileReader(File file) {
+        String rows; //the row being read
         StringBuilder builder = new StringBuilder();
-        String builderToString;
+
         try (BufferedReader br = new BufferedReader(new FileReader(file))){
             while ((rows = br.readLine()) != null){
                 builder.append(rows).append("\n");
             }
-            builderToString = builder.toString();
-            System.out.println("LOGLAMA: \n"+builderToString);
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
+
+            return builder.toString();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -109,9 +117,27 @@ public class FilePathDataImplements implements IFileLogData {
 
     public static void main(String[] args) {
         FilePathDataImplements fpdi = new FilePathDataImplements();
-        fpdi.logFileWriter("alihsan", "12345");
-        fpdi.logFileWriter("KaiserWII", "kfseqo");
-        fpdi.logFileReader();
+
+        fpdi.logFileCreator("car");
+        fpdi.logFileCreator("weapons");
+
+        File weapons = new File(fpdi.fileDirectoryName.concat("\\weapons.txt"));
+        File car = new File(fpdi.fileDirectoryName.concat("\\car.txt"));
+
+        fpdi.logFileWriter(weapons,"M4A1-S");
+        fpdi.logFileWriter(weapons,"AK-47");
+        fpdi.logFileWriter(car,"BMW M3 E46 GTR");
+        fpdi.logFileWriter(car,"TOYOTA SUPRA");
+
+        System.out.println("ALL FİLES AND THEİR CONTENTS");
+        System.out.println("----------------------------------------------");
+
+        for (File file: fpdi.logFileList()){
+            System.out.println(file.getName());
+            System.out.println("-----------");
+            System.out.println(fpdi.logFileReader(file));
+            System.out.println("-------------------------");
+        }
 
     }
 
